# youtube-analytics-project1

./: pyproject.toml
homework-2/: moscowpython.json
src/: channel.py  moscowpython.json  playlist.py  video.py
