[tool.poetry]
name = "youtube-analytics-project1"
version = "0.1.0"
description = ""
authors = ["vitali <sh015@mail.ru>"]
readme = "README.md"
packages = [{include = "youtube_analytics_project1"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
